--- a/NQueueStuffer.UI/NQueueStuffer.UI.csproj
+++ b/NQueueStuffer.UI/NQueueStuffer.UI.csproj
@@ -80,7 +80,9 @@
     <EmbeddedResource Include="View\QueueStufferView.resx">
       <DependentUpon>QueueStufferView.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
