--- a/NQueueStuffer.UI/App.config
+++ b/NQueueStuffer.UI/App.config
@@ -1,6 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0"?>
 <configuration>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="NServicebus" publicKeyToken="9fc386479f8a226c" culture="neutral" />
+        <bindingRedirect oldVersion="2.0.0.0" newVersion="2.0.0.1219" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+  
   <appSettings>
     <add key="defaultQueueName" value="default"/>    
   </appSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
