Added support for setting more reasonable defaults. DateTime members are now defaulted to DateTime.Now

--- a/NQueueStuffer.Core/NQueueStuffer.Core.csproj
+++ b/NQueueStuffer.Core/NQueueStuffer.Core.csproj
@@ -32,13 +32,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Castle.Core">
+    <Reference Include="Castle.Core, Version=1.1.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\Castle.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Castle.MicroKernel">
+    <Reference Include="Castle.MicroKernel, Version=2.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\Castle.MicroKernel.dll</HintPath>
     </Reference>
-    <Reference Include="Castle.Windsor">
+    <Reference Include="Castle.Windsor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\Castle.Windsor.dll</HintPath>
     </Reference>
     <Reference Include="log4net">
@@ -50,7 +53,8 @@
     <Reference Include="NServiceBus.Core">
       <HintPath>..\lib\NServiceBus.Core.dll</HintPath>
     </Reference>
-    <Reference Include="NServiceBus.ObjectBuilder.CastleWindsor">
+    <Reference Include="NServiceBus.ObjectBuilder.CastleWindsor, Version=2.0.0.1219, Culture=neutral, PublicKeyToken=9fc386479f8a226c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\NServiceBus.ObjectBuilder.CastleWindsor.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -64,6 +68,7 @@
     <Compile Include="AssemblyFetcher.cs" />
     <Compile Include="IAssemblyFetcher.cs" />
     <Compile Include="IMessageStuffer.cs" />
+    <Compile Include="MessageInstanceFactory.cs" />
     <Compile Include="MessageStuffer.cs" />
     <Compile Include="NServicebus\IMessageSerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
