--- a/NQueueStuffer.UI/App.config
+++ b/NQueueStuffer.UI/App.config
@@ -4,7 +4,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="NServicebus" publicKeyToken="9fc386479f8a226c" culture="neutral" />
-        <bindingRedirect oldVersion="2.0.0.0" newVersion="2.0.0.1219" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0"  newVersion="2.0.0.1219" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
