--- a/NQueueStuffer.UI/NQueueStuffer.UI.csproj
+++ b/NQueueStuffer.UI/NQueueStuffer.UI.csproj
@@ -64,6 +64,18 @@
     <Compile Include="NqsSettingItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\BatchView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\BatchView.Designer.cs">
+      <DependentUpon>BatchView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\HelpView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\HelpView.Designer.cs">
+      <DependentUpon>HelpView.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\IQueueStufferView.cs" />
     <Compile Include="View\MdiForm.cs">
       <SubType>Form</SubType>
@@ -87,6 +99,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="View\BatchView.resx">
+      <DependentUpon>BatchView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\HelpView.resx">
+      <DependentUpon>HelpView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\MdiForm.resx">
       <DependentUpon>MdiForm.cs</DependentUpon>
     </EmbeddedResource>
