Added nice icons and fixed flicking in mesega template when editing.

--- a/NQueueStuffer.UI/NQueueStuffer.UI.csproj
+++ b/NQueueStuffer.UI/NQueueStuffer.UI.csproj
@@ -33,6 +33,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>statistics.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Castle.Core">
       <HintPath>..\lib\Castle.Core.dll</HintPath>
@@ -129,6 +132,9 @@
       <Project>{465F0671-53DA-48E7-8785-0743757C804A}</Project>
       <Name>NQueueStuffer.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="statistics.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
