--- a/NQueueStuffer.Core/NQueueStuffer.Core.csproj
+++ b/NQueueStuffer.Core/NQueueStuffer.Core.csproj
@@ -59,6 +59,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Messaging" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -70,6 +71,8 @@
     <Compile Include="IMessageStuffer.cs" />
     <Compile Include="MessageInstanceFactory.cs" />
     <Compile Include="MessageStuffer.cs" />
+    <Compile Include="MSMQ\IQueueFinder.cs" />
+    <Compile Include="MSMQ\QueueFinder.cs" />
     <Compile Include="NServicebus\IMessageSerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="NServicebus\XMLMessageSerializer.cs" />
